[package]
name = "cme"
version = "0.1.0"
authors = ["Michael Backenkoehler <m.backenkoehler@gmail.com>"]
exclude = ["output/*", "models/*", "temp*", "run.log", "src/model_parser.rs", "*.csv", "*.ipynb", "*.pdf", ".ipynb_checkpoints/*", "*.sh", "*.py"]
build = "build.rs"

[build-dependencies]
lalrpop = "0.16.0"

[dependencies]
regex = "1.0.5"
getopts = "0.2.18"
lalrpop-util = "0.16.0"
error-chain = "0.12.0"
log = "0.4.5"
simplelog = "0.5.2"
statrs = "0.9.0"
GSL = "1.0.0"
rand = "0.6"
num_cpus = "1.8.0"
indicatif = "0.9.0"
smallvec = "0.6.5"
quickcheck = "0.7.1"
quickcheck_macros = "0.7.0"
cute = "0.3.0"
nalgebra = "0.16.1"
pyo3 = "0.5.2"
itertools = "*"
file-lock = "1.1"
