[package]
name = "cme"
version = "0.1.0"
authors = ["Michael Backenkoehler <m.backenkoehler@gmail.com>"]
exclude = ["output/*", "models/*", "temp*", "run.log", "src/model_parser.rs", "*.csv", "*.ipynb", "*.pdf", ".ipynb_checkpoints/*", "*.sh", "*.py"]
build = "build.rs"

[build-dependencies]
lalrpop = "0.17.0"

[dependencies]
regex = "1"
getopts = "0.2"
lalrpop-util = "0.17"
error-chain = "0.12"
log = "0.4"
simplelog = "0.7"
statrs = "0.9"
rand = "0.7"
rand_distr = "0.2"
num_cpus = "1.10"
indicatif = "0.12"
smallvec = "0.6"
quickcheck = "0.9"
cute = "0.3.0"
nalgebra = "0.18"
pyo3 = "0.8"
itertools = "*"
file-lock = "1.1"
